Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-03-31 Takashi
 PATCH: [ 1603292 ] Add tab interface for MDI child windows
  Src: MainFrm.cpp MainFrm.h Merge.dsp Merge.rc OptionsDef.h OptionsInit.cpp
   resource.h
  Src/Common: MDITabBar.cpp MDITabBar.h
  Src/Languages/*: Merge*.rc
 Fix broken resources
  Src/Languages/*: Merge*.rc

2007-03-31 Kimmo
 PATCH: [ 1689293 ] Batch file for building WinMerge files
  : buildall.bat

2007-03-30 Kimmo
 PATCH: [ 1690503 ] fix for bug 1659281 "WinMerge forgets monitor to use when th
  Submitted by from Dan Pidcock
  Src: MainFrm.cpp

2007-03-30 Gal
 RFE: [ 1690346 ] Manual selection of syntax highlighting scheme
  Src/Languages/*: Merge*.rc
  Src: Merge.rc MergeEditView.cpp MergeEditView.h resource.h

2007-03-29 Tim
 PATCH: [ 1646210 ] Use CSS for HTML report
  Src: DirCmpReport.cpp
 PATCH: [ 1686279 ] New icons for Copy and Advance
  Src/res: ToolbarDisabled.bmp ToolbarEnabled.bmp

2007-03-29 Kimmo
 PATCH: [ 1689854 ] C# development file filter
  Filters new file: CSharp_loose.flt
 BUG: [ 1689778 ] Refresh should be in view menu, not the edit menu
  Patch from Dan Pidcock
  Src: Merge.rc
  Src/Languages/*: Merge*.rc
 PATCH: [ 1689515 ] Swedish translation of "Page Se&tup"
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2007-03-27 Tim
 RFE: [ 1646407 ] Use "equal" or "not equal" as file compare icon
  (Fixed the blurred icons and minimize the flicking effect)
  Src: ChildFrm.cpp
  Src/res: MergeDoc.ico

2007-03-27 WinMerge experimental release 2.7.3.2 (SVN revision 4201)

2007-03-26 Tim
 PATCH: [ 1688012 ] Remove IDR_MAINFRAME icon from lang files
  Src: AboutDlg.cpp Merge.rc resource.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1684865 ] WinMerge Icon Set Revision 4
  (Now with the 256*256 versions)
  Src/res: MergeDoc.ico MergeProject.ico

2007-03-26 Kimmo
 PATCH: [ 1687966 ] Fix crash when changing compare method